pkexec wants split arguments

BUG: 351311